2020-03-11 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Remove unneeded cast to GedaMenuShell.
      Revise geda_menu_realize to utilize an ancillary GdkWindow pointer.

2020-03-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Utilize macros:

          * geda_get_widget_parent
          * geda_get_container_border_width

    * tests/test_file_chooser.c: Revise main to replace gtk_main functions;
      add quit().

2020-03-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_check_menu_item.c: Replace GtkToggleAction related
      operations with GedaToggleAction counterparts because later is no longer
      derived from the former.

    * src/widgets/geda_handlebox.c: Eliminate ancillary GtkBin from function
      geda_handle_box_map.

    * src/widgets/geda_invisible.c: Eliminate widget_class->show override and
      remove function geda_invisible_show.

2020-03-05 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_action.c: Remove unnecessary check for GEDA_IS_TOGGLE_ACTION
      in geda_action_get_action_name since GedaToggleAction is now derived from
      GedaAction.

    * src/widgets/geda_handlebox.c: Utilize ancillary pointer with macros:

          * geda_get_widget_style
          * geda_get_widget_window

    * src/widgets/geda_menu.c: Fix increase scope of menu pointer in function
      geda_menu_enter_notify. Utilize macros:

          * geda_get_container_border_width
          * geda_get_widget_style

2020-03-04 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_toggle_action.h: Derive GedaToggleAction from GedaAction
      instead of GtkToggleAction, remove members action_name and multikey_accel,
      add active and draw_as_radio.

    * src/widgets/geda_toggle_action.c: Redo module in oder to derive GedaToggleAction
      from GedaAction; add functions:

          * geda_toggle_action_toggled
          * geda_toggle_action_get_active
          * geda_toggle_action_set_active