@@ -1898,9 +1898,11 @@ static void geda_menu_realize (GtkWidget *widget)
 
   attributes_mask = GDK_WA_X | GDK_WA_Y | GDK_WA_VISUAL | GDK_WA_COLORMAP;
   window          = gtk_widget_get_parent_window (widget);
-  widget->window  = gdk_window_new (window, &attributes, attributes_mask);
+  window          = gdk_window_new (window, &attributes, attributes_mask);
 
-  gdk_window_set_user_data (widget->window, widget);
+  geda_set_widget_window (widget, window);
+
+  gdk_window_set_user_data (window, widget);
 
   border_width = geda_get_container_border_width(widget);
 
